--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class='logo'>
-            <img src='./img/Logos/LOGO LETRAS BLANCAS.png' alt='logo'/>            
+            <img src='./Img/Logos/LOGO LETRAS BLANCAS.png' alt='logo'/>            
             <div class='container--icons'>
                 <div class="other--icons">
                     <i class="fas fa-user fa-xs"></i>
