update links and grid

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <img src="./Img/Logos/LOGO LETRAS BLANCAS.png" alt="Logo-Black-Grade">
             </div>
             <div class="barra--menu--items">
-                <a class='barra--menu--item active' href="">Inicio</a>
-                <a class='barra--menu--item' href="">Sobre Nosotros</a>
-                <a class='barra--menu--item' href="">Colección</a>
-                <a class='barra--menu--item' href="">Contacto</a>
+                <a class='barra--menu--item active' href="#inicio">Inicio</a>
+                <a class='barra--menu--item' href="#sobre-nosotros">Sobre Nosotros</a>
+                <a class='barra--menu--item' href="#coleccion">Colección</a>
+                <a class='barra--menu--item' href="#contacto">Contacto</a>
             </div>
         </div>
-        <div class='logo'>
+        <div id="inicio" class='logo'>
             <img src='./Img/Logos/LOGO LETRAS BLANCAS.png' alt='logo'/>            
             <div class='container--icons'>
                 <div class="other--icons">
@@ -57,7 +57,7 @@
         </div>
     </div>
     
-    <div class= 'cuadro-debajo'>
+    <div id='coleccion' class= 'cuadro-debajo'>
         <h3>Best Collection Arrived</h3>
         <p>La mejor colección de <span>Black Grade</span> ya está aquí, no esperemes más y obtén tu diseño favorito</p>
     </div>
@@ -178,7 +178,7 @@
             </div>
         </div>
     </div>
-    <div class="historia--black--grade">
+    <div id='sobre-nosotros' class="historia--black--grade">
         <div class="historia--black--grade--img">
             <img src="./Img/jpg/imagenes--bottom/3.jpg" alt="">
         </div>
@@ -511,7 +511,7 @@
             <img src="./Img/jpg/imagenes--bottom/22.jpg" alt="Black-Grade-imagen" class="6">
         </div>
     </div>
-    <div class="footer">
+    <div id="contacto" class="footer">
         <div class="footer--container">
             <div class="logo--footer">
                 <img src="./Img/Logos/LOGO LETRAS BLANCAS.png" alt="Logo-Black-Grade">
